@@ -1,9 +1,13 @@
 package clap.server.application.mapper;
 
+import clap.server.adapter.inbound.web.dto.task.AttachmentRequest;
+import clap.server.adapter.inbound.web.dto.task.AttachmentResponse;
+import clap.server.adapter.inbound.web.dto.task.FindTaskDetailsResponse;
 import clap.server.domain.model.task.Attachment;
 import clap.server.domain.model.task.Task;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 public class AttachmentMapper {
@@ -11,15 +15,14 @@ public class AttachmentMapper {
         throw new IllegalArgumentException();
     }
 
-    public static List<Attachment> toAttachments(Task task, List<String> fileUrls) {
-        return fileUrls.stream()
-                .map(fileUrl -> Attachment.builder()
-                        .task(task)
-                        .fileUrl(fileUrl)
-                        .originalName("파일 예시 이름")
-                        .fileSize("16MB") //TODO: 하드코딩 제거
-                        .build())
-                .collect(Collectors.toList());
+
+
+    public static List<Long> toAttachmentIds(List<AttachmentRequest> attachmentRequests) {
+        return attachmentRequests.stream()
+                .map(AttachmentRequest::fileId)
+                .filter(Objects::nonNull)
+                .toList();
     }
+
 }
 
